# pc4_robotica

./: .gitignore  README.md  bitacora_ejecucion.md  mover_brazo.backup
brazo_robot_ws/.venv_pc4_robotica/: pyvenv.cfg
brazo_robot_ws/install/: local_setup.sh  setup.sh
brazo_robot_ws/install/brazo_pkg/share/brazo_pkg/: package.sh  package.xml
brazo_robot_ws/install/brazo_pkg/share/brazo_pkg/launch/: brazo_sim.launch.py
brazo_robot_ws/install/brazo_pkg/share/brazo_pkg/urdf/: brazo.xacro
brazo_robot_ws/log/: latest_build
brazo_robot_ws/src/brazo_pkg/: package.xml  setup.py
brazo_robot_ws/src/brazo_pkg/action/: MoveJoint.action
brazo_robot_ws/src/brazo_pkg/brazo_pkg/: mover_brazo.py
brazo_robot_ws/src/brazo_pkg/launch/: brazo_sim.launch.py
brazo_robot_ws/src/brazo_pkg/urdf/: brazo.xacro
build.backup/brazo_pkg/: package.xml  setup.py
build.backup/brazo_pkg/brazo_pkg.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
build.backup/brazo_pkg/prefix_override/: sitecustomize.py
build.backup/brazo_pkg/share/brazo_pkg/hook/: pythonpath_develop.dsv  pythonpath_develop.sh
install/: setup.sh
install.backup/: local_setup.sh  setup.zsh
install.backup/brazo_pkg/share/brazo_pkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install.backup/brazo_pkg/share/brazo_pkg/urdf/: brazo.xacro
install.backup/install/: setup.bash
install.backup/install/brazo_pkg/share/brazo_pkg/launch/: brazo_sim.launch.py
log.backup/: latest_build
