<?xml version="1.0"?>
<package format="3">
  <name>brazo_pkg</name>
  <version>0.0.1</version>
  <description>Paquete de ejemplo para controlar un brazo robot en ROS 2 Kilted</description>
  <maintainer email="tu_email@dominio.com">Esau</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
